src/pages/Chat.css
.messages-main{
    display: flex;
}

.sidepanel{
    flex: 1;
    width: 100%;
}

.chat-window{
	box-shadow:  inset 1px 1px 1px #abb1a8;
    padding: 20px;
    width: 100%;
    text-align: left;
    height: 88vh;
    flex: 2;
}

.chat-messages{
    height: 66%;
    overflow-y: auto;
}

.chat-message-container.user{
    text-align: right;
}

.chat-message{
    display: inline-block;
    background-color: #94dbb5;
	border-radius: 6px;
	font-size: 14px;
	margin: 4px;
	padding: 4px 8px;
	box-shadow:  1px 1px 2px #8baf9d, 
			 -1px -1px 2px #e0ffef;
    border: none;
    color: #272727;
}

.chat-message.other{
    background-color: #a2ceeb;
    box-shadow:  1px 1px 2px #86a3b6, 
    -1px -1px 2px #ddf1ff;

}

.chat-message-text{
    font-family: 'Telex', sans-serif;
}

.chat-input-container{
    text-align: center;
    margin-top: 10px;
    padding-top: 10px;
    border-top: #afafaf 1px solid;
    height: 14%;

}
.chat-input-form{
    margin: 0px;
}

.chat-input{
    display: inline-block;
    background-color: #f7f7f7;
	border-radius: 6px;
    font-size: 14px;
    margin-right: 4px;
	padding: 4px 8px;
	box-shadow:  inset 1px 1px 1px #abb1a8, 
			 inset -1px -1px 1px #ffffff;
    border: none;
    color: #272727;
    font-family: 'Telex', sans-serif;
    width: 80%;
}

button.chat-send{
    padding: 4px 8px;
    float: right;
    margin: 0px;
    width: 18%;
}

.chat-header{
    text-align: center;
    height: 20%;
    padding-bottom: 18px;
    margin-bottom: 18px;
    border-bottom: #afafaf 1px solid;
}

.chat-photo{
    height: 50px;
    width: 50px;
    border-radius: 100%;
    margin: 0px;
    border: 1px solid rgb(126, 126, 126);
    box-shadow:  1px 1px 2px #a1a1a1, 
    -1px -1px 2px #ffffff;
    object-fit: cover;
}

.chat-photo.partner{
    height: 40px;
    width: 40px;
    float: left;
    margin-right: 30px;
}

.partner-select{
    height: 60px;
    border-radius: 4px;
    background-color: #f7f7f7;
    z-index: 0;
    padding: 10px 30px;
    cursor: pointer;
}

.partner-select>*{
    text-align: left;
}

.partner-select>h3{
    font-weight: 800;
}

.last-message.from{
    color: rgb(105, 148, 125);
}

.last-message.to{
    color: rgb(88, 114, 133);
}

.partner-select:hover{
    background-color: #effffb21;
    box-shadow:  2px 2px 2px #d3d3d3, 
    -2px -2px 2px #ffffff;
    z-index: 2;
}

h3.name{
    font-family: 'Nunito', sans-serif;
    font-size: 28px;
}

